# rust-wasm-template

./: .gitignore  Cargo.toml  README.md  package.json  server.js
public/: index.html  index.js
src/: lib.rs
