[package]
name = "wasm-template"
version = "0.1.0"
authors = ["Julia <julia@juliarose.dev>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
# yew = { git = "https://github.com/yewstack/yew/" }
wasm-bindgen = "0.2"
thousands = "0.2.0"
